Update title to slide

--- a/_posts/0000-01-02-i-marian.md
+++ b/_posts/0000-01-02-i-marian.md
@@ -1,5 +1,5 @@
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our i-marian's slide!"
 ---
 i own this, you dumbass!
 Use the left arrow to go back!
