making  line 4 more awesome

--- a/_posts/0000-01-02-i-marian.md
+++ b/_posts/0000-01-02-i-marian.md
@@ -1,5 +1,5 @@
 layout: slide
 title: "Welcome to our i-marian's slide!"
 ---
-THIS IS MINE!!!
+THIS IS MINE!!! :tada:
 Use the left arrow to go back!
